--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta author="Nispeon">
     <meta name="github:creator" content="https://github.com/Nispeon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta description="Trust me, just click">
+    <meta description="It's important">
     <link rel="stylesheet" href="style.css">
     <title>Trust me</title>
 </head>
