added meta description

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta author="Nispeon">
+    <meta name="description" content="Click it. It's important, trust me.">
     <meta name="github:creator" content="https://github.com/Nispeon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta description="It's important">
     <link rel="stylesheet" href="style.css">
     <title>Trust me</title>
 </head>
