minify script and style

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Click it. It's important, trust me.">
     <meta name="github:creator" content="https://github.com/Nispeon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.min.css">
     <title>Trust me</title>
 </head>
 <body>
@@ -20,6 +20,6 @@
         <embed src="./Mike Ault - Flying Forever loop.mp3" loop>
     </audio>
     
-    <script src="script.js"></script>
+    <script src="script.min.js"></script>
 </body>
 </html>
