Made code cleaner

--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta author="Nispeon">
-    <meta name="description" content="Click it. It's important, trust me.">
-    <meta name="github:creator" content="https://github.com/Nispeon">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.min.css">
-    <title>Trust me</title>
+  <meta charset="UTF-8">
+  <meta author="Nispeon">
+  <meta name="description" content="Click it. It's important, trust me.">
+  <meta name="github:creator" content="https://github.com/Nispeon">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.min.css">
+  <title>Trust me</title>
 </head>
+
 <body>
 
-    <section id="disco">
-        <button id="lesgo">Let's go</button>
-    </section>
+  <section id="disco">
+    <button id="lesgo">Let's go</button>
+  </section>
 
-    <audio controls loop preload id="banger">
-        <source src="./Mike Ault - Flying Forever loop.mp3" type="audio/mp3">
-        <embed src="./Mike Ault - Flying Forever loop.mp3" loop>
-    </audio>
-    
-    <script src="script.min.js"></script>
+  <audio controls loop preload id="banger">
+    <source src="./assets/Mike Ault - Flying Forever loop.mp3" type="audio/mp3">
+    <embed src="./assets/Mike Ault - Flying Forever loop.mp3" loop>
+  </audio>
+
+  <script src="js/script.min.js"></script>
 </body>
+
 </html>
