Change music file name

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </section>
 
   <audio controls loop preload id="banger">
-    <source src="./assets/Mike Ault - Flying Forever loop.mp3" type="audio/mp3">
-    <embed src="./assets/Mike Ault - Flying Forever loop.mp3" loop>
+    <source src="./assets/loop.mp3" type="audio/mp3">
+    <embed src="./assets/loop.mp3" loop>
   </audio>
 
   <script src="js/script.min.js"></script>
