--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KMBLC3VJBV"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-211291793-2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-KMBLC3VJBV');
+    gtag('config', 'UA-211291793-2');
   </script>
   <meta charset="UTF-8">
   <meta author="Nispeon">
